css/style.css
body {
    font-family: 'Roboto',Arial, Helvetica, sans-serif;
    display: flex;
    flex-direction: column;
    margin:0;
}

.section1{
    display: flex;
    background-color: #1F2937;
}

.section2{
    display: flex;
    flex-direction: column;
}
.section2 .row1{
    display: flex;
    justify-content: center;
    padding-top: 3%;
}

.section2 .row2{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding-bottom: 5%;
    padding-left: 30%;
    padding-right: 30%;
}



.item-box{
    border: 3px solid;
    width: 150px;
    height: 150px;
    border-radius: 20px;
    color: #3882F6;
}

.box{
    display: flex;
    flex-direction: column;
    align-items: center;
}
#info-header-text{
    font-size: 36px;
    font-weight: 800;
    text-decoration-color: #1F2937;
}

.text{
    text-align: center;
}

.section3{ 
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 30%;
    padding-right: 30%;
    padding-top: 5%;
    padding-bottom: 5%;
}
.section3 .row1{ 
    font-size: 36px;
    color: #1F2937;
    font-style: italic;
    text-align: justify;
} 
.section3 .row2{ 
    font-style: bold;
    font-weight: 800;
    display: flex; 
    justify-content: flex-end;
}

.section4{
    display: flex;
    justify-content: center;
    padding: 2%;
}

.section4 .blue-box{
    display: flex;
    background-color: #3882F6;
    border-radius: 20px;
    padding: 1%;
}

.section4 .blue-box .sign-up-text{
    display: flex;
    flex-direction: column;
}

.section4 .blue-box .sign-up-button{
    display: flex;
    align-items: center;
}

